# gzeus

./: Cargo.toml  README.md  pyproject.toml  requirements-tests.txt  requirements.txt
.github/workflows/: CI.yml
benches/: bench.ipynb
examples/: examples.ipynb
python/gzcsv/: chunker.py  utils.py
python/gzeus/: __init__.py  chunker.py
python/polars_gzcsv/: __init__.py  chunker.py  utils.py
src/: gzcsv_core.rs  gzeus.rs  lib.rs  main.rs  py_gzcsv.rs  py_gzeus.rs
